# Mestrado

./: .gitignore  .gitmodules  Maps_dir.md  README.md  ctl_draw_teste.txt  ctldraw_teste.txt  grid_valid_cells.txt  log_4r_c1.txt  manual_conexao_jaguar (1).md  manual_conexao_jaguar.md  new_ctldraw_teste.txt  new_objects_in_map.txt  objects_in_map.txt
Dissertation/simulation/: CMakeLists.txt  package.xml  packs_ros.txt
Dissertation/simulation/Experimental_Results/: formulas_4R_SF_PORO.txt  formulas_4R_SV_PORO.txt
Dissertation/simulation/Logs_18-01/: full_log_3p_pioneer_rs.txt  full_log_4p_wobj_pioneer.txt  sim_time_2p_pioneer_rs.txt
Dissertation/simulation/Logs_18-01/Full/: full_log_2p_pioneer_rs.txt  full_log_4p_pioneer_rs.txt
Dissertation/simulation/Logs_18-01/Time_Logs/: sim_time_3p_husky_rs.txt  sim_time_3p_pioneer_rs.txt  sim_time_4p_pioneer_rs.txt  (+1 more)
Dissertation/simulation/Logs_Teste/: full_log_1p.txt  full_log_2p.txt  full_log_3p.txt  full_log_4p.txt  full_log_5p.txt  sim_time_1p.txt  sim_time_2p.txt  sim_time_3p.txt  sim_time_3p_pioneer.txt  sim_time_4p.txt  sim_time_4p_pioneer.txt  sim_time_4p_wobj_pioneer.txt  sim_time_sowdc_clean.txt
Dissertation/simulation/config/: costmap_common.yaml  costmap_common_local.yaml  costmap_commons.yaml  costmap_commons_husky.yaml  costmap_commons_pioneer.yaml  costmap_global_laser.yaml  costmap_global_static.yaml  costmap_local.yaml  global_costmap.yaml  husky.rviz  husky_visualization.rviz  local_costmap.yaml  localization.yaml  planner.yaml  tags.yaml  teb_config.yaml  teb_config_pioneer.yaml  yolo_object_weights.txt
Dissertation/simulation/launch/: amcl.launch  amcl_husky.launch  amcl_pioneer.launch  explore.launch  gmapping.launch  husky_bringup.launch  map_merge.launch  move_base.launch  move_base_husky.launch  move_base_pioneer.launch  multi_husky.launch  multi_pioneer.launch  pioneer_bringup.launch  simulation.launch
Dissertation/simulation/logs/: formulas_calc_teste_husky.txt  formulas_calc_teste_husky_NOVO.txt  formulas_qnt_choices.txt  formulas_random_seed.txt  formulas_random_seed_real.txt  formulas_time_random.txt  full_log_0p.txt  full_log_10p.txt  full_log_20p.txt  full_log_30p.txt  full_log_40p.txt  sim_time_0p.txt  sim_time_10p.txt  sim_time_20p.txt  sim_time_30p.txt  sim_time_40p.txt
Dissertation/simulation/scripts/: MapServer.cpp  MapServer.h  client_move.cpp  create_graphs.py  ctl_draw_teste.txt  ctl_draw_teste_BKP2.txt  ctldraw_teste_4R.txt  ctldraw_teste_5R_MOD.txt  ctldraw_teste_5r_OLD.txt  ctldraw_teste_6R_MOD.txt  ctldraw_teste_6r.txt  exploration.cpp  grid_map.cpp  grid_valid_cells_5.txt  grid_valid_cells_6.txt  map_server_teste.cpp  mark_map_sim.cpp  new_ctldraw_teste.txt  new_objects_in_map (copy).txt  new_robot_pose (copy).txt  new_robot_pose.txt  object_cleaner.cpp  object_position_reader.cpp  objects_in_map.txt  objects_in_map_4R.txt  objects_in_map_5R_MOD.txt  objects_in_map_5r_OLD.txt  objects_in_map_6R_MOD.txt  objects_in_map_6r.txt  objects_in_map_BKP2.txt  odom_cell_calc.py  path_fromtag.cpp  path_fromtag.h  path_tag.py  patrol.cpp  robot_pose_4R.txt  robot_pose_5R_MOD.txt  robot_pose_6R_MOD.txt  semantic.cpp  sim_time_sowdc.cpp  (+1 more)
Dissertation/simulation/worlds/: Lab_ufrgs.yaml  Lab_ufrgs_lane.yaml  empty_world.world  lab_ufrgs.world  sowdc.world  sowdc.yaml  sowdc_10p.world  sowdc_1p.world  sowdc_20p.world  sowdc_2p.world  sowdc_2p.yaml  sowdc_2p_lane.yaml  sowdc_30p.world  sowdc_3p.world  sowdc_40p.world  sowdc_4p.yaml  sowdc_4p_5r_c1.world  sowdc_4p_5r_c2.world  sowdc_4p_5r_c3.world  sowdc_4p_5r_c4.world  sowdc_4p_5r_c5.world  sowdc_4p_6r_c1.world  sowdc_4p_6r_c2.world  sowdc_4p_6r_c3.world  sowdc_4p_6r_c4.world  sowdc_4p_c1.world  sowdc_4p_c2.world  sowdc_4p_c3.world  sowdc_4p_c4.world  sowdc_4p_lane.yaml  sowdc_5p.world  sowdc_clean.world  sowdc_lane.yaml  tecnopucSim.yaml  warehouse_cells_explore.yaml  warehouse_cells_joystick_lane.yaml  warehouse_cells_mod.world  warehouse_cells_semantic.world  warehouse_cells_semantic2.world
Dissertation/simulation/xacro/: _d435.urdf.xacro  husky.urdf.xacro  intel_realsense.urdf.xacro  sick_lms1xx.urdf.xacro  tag.material  wheel.urdf.xacro
(+119 files in other folders)
